@@ -4,6 +4,7 @@ MNEMOSYNE 0.9.6:
 -either space, enter or return can be used to show the answer. The default
  answer grade is set to 4, which once again can be chosen by either space,
  enter or return (patch by Dirk Herrmann).
+-added possibility to preview an item. Useful if you work with tags.
 -importing of txt files in utf8 unicode encoding now works (patch by Ian 
  MacLean).
 -exporting to txt files now uses utf8 encoding.
